--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-demo",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Nuxt.js project",
   "author": "moedong",
   "private": true,
@@ -42,6 +42,8 @@
     "koa-router": "^7.4.0",
     "koa-session2": "^2.2.6",
     "koa-static": "^5.0.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "nuxt": "latest",
     "rasterizehtml": "^1.2.4",
     "simplemde": "^1.11.2",
